@@ -1,28 +1,83 @@
 plugins {
-    id 'java'
     id 'org.springframework.boot' version '3.5.3'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.asciidoctor.jvm.convert' version '4.0.4'
 }
 
-group = 'com'
+group = 'kr.co.goldenhome'
 version = '0.0.1-SNAPSHOT'
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+allprojects {
+
+    apply plugin: 'java'
+    apply plugin: 'java-library'
+    apply plugin: 'groovy'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'org.asciidoctor.jvm.convert'
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+        }
     }
+
+    repositories {
+        mavenCentral()
+    }
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+        asciidoctorExt
+    }
+
+    ext {
+        snippetsDir = file('build/generated-snippets')
+    }
+
+    dependencies {
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+        implementation 'org.slf4j:slf4j-api'
+        asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+        testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation("org.spockframework:spock-core:2.4-M6-groovy-4.0")
+        testImplementation("org.spockframework:spock-spring:2.4-M6-groovy-4.0")
+
+    }
+
+    tasks.named('test') {
+        outputs.dir snippetsDir
+        useJUnitPlatform()
+        jvmArgs '-Xshare:off'
+        jvmArgs '-XX:+EnableDynamicAgentLoading'
+    }
+
+    tasks.named('asciidoctor') {
+        sourceDir file('docs/asciidoc') // [변경 7]: index.adoc이 있는 경로
+        outputDir layout.buildDirectory.dir('docs') // [변경 8]: HTML 출력 경로
+
+        attributes \
+        'user-signup-snippets': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-signup', // [변경 9]: 스니펫 경로
+        'user-verify-snippets': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-verify',
+        'user-login-snippets': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-login'
+
+        sources {
+            include '**/index.adoc' // [변경 10]: index.adoc만 처리
+        }
+
+        dependsOn subprojects.test
+    }
+
+
+
+    bootJar.enabled = false
+    jar.enabled = false
 }
 
-repositories {
-    mavenCentral()
-}
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
